--- a/app.html
+++ b/app.html
@@ -2,7 +2,7 @@
 <html lang="en" class="h-100">
 
 <head>
-    <title>App Name: A Coding Project By Ryan LaClaire</title>
+    <title>BENNY: A Coding Project By Ryan LaClaire</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -16,13 +16,17 @@
 
     <script src="https://kit.fontawesome.com/5db21ba9c6.js" crossorigin="anonymous"></script>
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Racing+Sans+One&display=swap" rel="stylesheet">
+
 </head>
 
 <body class="d-flex flex-column h-100">
     <!-- ==== NAV SECTION ===-->
     <nav class="navbar navbar-expand-md navbar-dark fixed-top">
         <div class="container-fluid">
-            <a class="navbar-brand" href="index.html"><img src="/img/LaClaireMark.svg" class="d-inline-block align-text-top" alt="LaClaire Logo" width="30" height="30"> APP Name</a>
+            <a class="navbar-brand" href="index.html"><img src="/img/LaClaireMark.svg" class="d-inline-block align-text-top" alt="LaClaire Logo" width="30" height="30"><span class="appName"> BENNY</span></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
                 aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -50,8 +54,42 @@
     </nav>
      <!-- ==== MAIN SECTION ===-->
     <main class="flex-shrink-0">
-       <div class="container">
-
+       <div class="container mt-4">
+            <div class="row row-cols-1 row-cols-lg-2">
+                <div class="col col-lg-4 border-2 border-end">
+                    <h1><span class="appName">BENNY:</span> A Coding Project</h1>
+                    <h4 class="lead">
+                        Live life one loop at a time. A javascript coding challenge using loops. Write a program that 
+                        displays the numbers from 0 to 100. Display all even number in <strong>BOLD</strong>.
+                    </h4>
+                    <h2 class="mt-4 border-bottom border-2">Instructions</h2>
+                    <p>Enter a starting value and an ending value. Press the button and the values will appear.</p>
+                </div>
+                <div class="col col-lg-8">
+                    <div>
+                        <h5>Enter Values</h5>
+                        <form class="row gy-2 gx-3">
+                            <div class="col">
+                                <input id="startValue" type="number" class="form-control" placeholder="Start Value" value=0 aria-label="Start Value">
+                            </div>
+                            <div class="col">
+                                <input id="endValue" type="number" class="form-control" placeholder="End Value" value=100 aria-label="End Value">
+                            </div>
+                            <div class="col-12 d-flex justify-content-end mt-3">
+                                <button id="btnSubmit" type="button" class="btn btn-dark btn-lg">Display <span class="appName"> BENNY</span> Results</button>
+                            </div>
+                        </form>
+                        <h2 class="mt-5 border-bottom border-2">Results</h2>
+                        <div class="table-responsive">
+                            <table class="table table-striped table-sm">
+                                <tbody id="results">
+                                    <!-- Results go HERE!-->
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+            </div>
        </div>
     </main>
      <!-- ==== FOOTER SECTION ===-->
