--- a/code.html
+++ b/code.html
@@ -2,7 +2,7 @@
 <html lang="en" class="h-100">
 
 <head>
-    <title>App Name: A Coding Project By Ryan LaClaire</title>
+    <title>BENNY: A Coding Project By Ryan LaClaire</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -17,13 +17,17 @@
 
     <script src="https://kit.fontawesome.com/5db21ba9c6.js" crossorigin="anonymous"></script>
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Racing+Sans+One&display=swap" rel="stylesheet">
+
 </head>
 
 <body class="d-flex flex-column h-100">
     <!-- ==== NAV SECTION ===-->
     <nav class="navbar navbar-expand-md navbar-dark fixed-top">
         <div class="container-fluid">
-            <a class="navbar-brand" href="index.html"><img src="/img/LaClaireMark.svg" class="d-inline-block align-text-top" alt="LaClaire Logo" width="30" height="30"> APP Name</a>
+            <a class="navbar-brand" href="index.html"><img src="/img/LaClaireMark.svg" class="d-inline-block align-text-top" alt="LaClaire Logo" width="30" height="30"><span class="appName"> BENNY</span></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
                 aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -52,7 +56,7 @@
      <!-- ==== MAIN SECTION ===-->
     <main class="flex-shrink-0">
        <div class="container py-4 px-4 mt-5">
-           <h2 class="border-2 border-bottom border-dark">The Code for App Name</h2>
+           <h2 class="border-2 border-bottom border-dark">The Code for <span class="appName">BENNY</span> </h2>
         <div class="row row-cols-1 row-cols-lg-2">
             <div class="col col-lg-8">
                 <pre class="line-numbers">
