--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" class="h-100">
 
 <head>
-    <title>App Name: A Coding Project By Ryan LaClaire</title>
+    <title>BENNY: A Coding Project By Ryan LaClaire</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -16,13 +16,17 @@
 
     <script src="https://kit.fontawesome.com/5db21ba9c6.js" crossorigin="anonymous"></script>
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Racing+Sans+One&display=swap" rel="stylesheet">
+
 </head>
 
 <body class="d-flex flex-column h-100">
     <!-- ==== NAV SECTION ===-->
     <nav class="navbar navbar-expand-md navbar-dark fixed-top">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#"><img src="/img/LaClaireMark.svg" class="d-inline-block align-text-top" alt="LaClaire Logo" width="30" height="30"> APP Name</a>
+            <a class="navbar-brand" href="#"><img src="/img/LaClaireMark.svg" class="d-inline-block align-text-top" alt="LaClaire Logo" width="30" height="30"><span class="appName"> BENNY</span></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
                 aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -53,7 +57,7 @@
        <div class="container col-xxl-8 px-4 py-5">
             <div class="row g-5 py-4 row-cols-1 row-cols-md-2">
                 <div class="col order-last order-md-first">
-                    <h1 class="display-5 fw-bold lh-1 mb-3">App Name: A Coding Project</h1>
+                    <h1 class="display-5 fw-bold lh-1 mb-3"><span class="appName">BENNY</span>: A Coding Project</h1>
                     <h4 class="lead">
                         Live life one loop at a time. A javascript coding challenge using loops. Write a program that 
                         displays the numbers from 0 to 100. Display all even number in <strong>BOLD</strong>.
@@ -82,7 +86,7 @@
                     </h5>
                 </div>
                 <div class="col">
-                    <img src="/img/ZeroToOneHundred2.svg" class="img-fluid center-block d-block mx-auto" alt="Zero to One Hundred" height="300" width="500">
+                    <img src="/img/ZeroToOneHundred.svg" class="img-fluid center-block d-block mx-auto" alt="Zero to One Hundred" height="300" width="500">
                 </div>
             </div>
        </div>
