--- a/app.html
+++ b/app.html
@@ -60,7 +60,7 @@
                     <h1><span class="appName">BENNY:</span> A Coding Project</h1>
                     <h4 class="lead">
                         Live life one loop at a time. A javascript coding challenge using loops. Write a program that 
-                        displays the numbers from 0 to 100. Display all even number in <strong>BOLD</strong>.
+                        displays the numbers from 0 to 100. Display all even numbers in <strong>BOLD</strong>.
                     </h4>
                     <h2 class="mt-4 border-bottom border-2">Instructions</h2>
                     <p>Enter a starting value and an ending value. Press the button and the values will appear.</p>
@@ -107,8 +107,8 @@
                 <div class="col d-flex justify-content-center justify-content-md-end align-items-center">
                     <div class="row">
                         <div class="col social"><a href="https://www.linkedin.com/in/ryan-laclaire/" target="_blank"><i class="fab fa-linkedin fa-2x"></i></a></div>
-                        <div class="col social"><a href="#" target="_blank"><i class="fab fa-github fa-2x"></i></a></div>
-                        <div class="col social"><a href="#" target="_blank"><i class="fab fa-twitter fa-2x"></i></a></div>
+                        <div class="col social"><a href="https://github.com/ryanlaclaire" target="_blank"><i class="fab fa-github fa-2x"></i></a></div>
+                        <div class="col social"><a href="https://twitter.com/ryanlaclaire32" target="_blank"><i class="fab fa-twitter fa-2x"></i></a></div>
                     </div>
                 </div>
             </div>
@@ -119,6 +119,9 @@
         integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous">
     </script>
     <script src="/js/site.js"></script>
+    <script>
+        document.getElementById("btnSubmit").addEventListener("click", getValues);
+    </script>
 </body>
 
 </html>
