--- a/code.html
+++ b/code.html
@@ -157,7 +157,7 @@
                 <div class="col d-flex justify-content-center justify-content-md-end align-items-center">
                     <div class="row">
                         <div class="col social"><a href="https://www.linkedin.com/in/ryan-laclaire/" target="_blank"><i class="fab fa-linkedin fa-2x"></i></a></div>
-                        <div class="col social"><a href="https://github.com/ryanlaclaire" target="_blank"><i class="fab fa-github fa-2x"></i></a></div>
+                        <div class="col social"><a href="https://github.com/ryanlaclaire/Benny" target="_blank"><i class="fab fa-github fa-2x"></i></a></div>
                         <div class="col social"><a href="https://twitter.com/ryanlaclaire32" target="_blank"><i class="fab fa-twitter fa-2x"></i></a></div>
                     </div>
                 </div>
