Added links for Nav bar

--- a/code.html
+++ b/code.html
@@ -44,10 +44,10 @@
                         <a class="nav-link active" href="code.html">The Code</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" target="_blank" href="#">Git Repo</a>
+                        <a class="nav-link" target="_blank" href="https://github.com/ryanlaclaire/Benny">Git Repo</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" target="_blank" href="#">About</a>
+                        <a class="nav-link" target="_blank" href="https://ryanlaclaire-portfolio.netlify.app">About</a>
                     </li>
                 </ul>
             </div>
@@ -157,7 +157,7 @@
                 <div class="col d-flex justify-content-center justify-content-md-end align-items-center">
                     <div class="row">
                         <div class="col social"><a href="https://www.linkedin.com/in/ryan-laclaire/" target="_blank"><i class="fab fa-linkedin fa-2x"></i></a></div>
-                        <div class="col social"><a href="https://github.com/ryanlaclaire/Benny" target="_blank"><i class="fab fa-github fa-2x"></i></a></div>
+                        <div class="col social"><a href="https://github.com/ryanlaclaire" target="_blank"><i class="fab fa-github fa-2x"></i></a></div>
                         <div class="col social"><a href="https://twitter.com/ryanlaclaire32" target="_blank"><i class="fab fa-twitter fa-2x"></i></a></div>
                     </div>
                 </div>
