--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                         </div>
                     </h5>
                 </div>
-                <div class="col">
+                <div class="col d-flex align-items-center">
                     <img src="/img/ZeroToOneHundred.svg" class="img-fluid center-block d-block mx-auto" alt="Zero to One Hundred" height="300" width="500">
                 </div>
             </div>
